--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="js/jquery-3.6.0 (1).js" type="text/javascript" charset="utf-8"></script>
   <script src="js/lightslider.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/main.js" type="text/javascript" charset="utf-8"></script>
+    <link rel="shortcut icon" href="Media/favicon.png" type="image/x-icon" />
 </head>
 
 <body>
